Moving overview, plantgro to root directory

--- a/examples/wheat/ceres/usage_example.ipynb
+++ b/examples/wheat/ceres/usage_example.ipynb
@@ -189,7 +189,7 @@
    "outputs": [],
    "source": [
     "# Call the function\n",
-    "overview_observations,  overview_ins_path = dpest.overview(\n",
+    "overview_observations,  overview_ins_path = dpest.wheat.overview(\n",
     "    treatment = '164.0 KG N/HA IRRIG',\n",
     "    overview_file_path = './DSSAT48/Wheat/OVERVIEW.OUT'\n",
     ")\n",
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "# Call the function\n",
-    "plantgro_observations, plantgro_ins_path = dpest.plantgro(\n",
+    "plantgro_observations, plantgro_ins_path = dpest.wheat.plantgro(\n",
     "    plantgro_file_path = './DSSAT48/Wheat/PlantGro.OUT',\n",
     "    treatment = '164.0 KG N/HA IRRIG',\n",
     "    variables = ['LAID', 'CWAD', 'T#AD']\n",
@@ -374,7 +374,7 @@
    "outputs": [],
    "source": [
     "# Call the function\n",
-    "dpest.uplantgro(\n",
+    "dpest.wheat.utils.uplantgro(\n",
     "    './DSSAT48/Wheat/PlantGro.OUT', \n",
     "    '164.0 KG N/HA IRRIG', \n",
     "    ['LAID', 'CWAD', 'T#AD'])"
